Override `--atlas-z-index` default value of 10 to prevent improper stacking order of figure labels

--- a/packages/11ty/content/_assets/styles/components/q-figure.scss
+++ b/packages/11ty/content/_assets/styles/components/q-figure.scss
@@ -19,6 +19,7 @@
 // .q-figure
 // -----------------------------------------------------------------------------
 .q-figure {
+  --atlas-z-index: 0;
   border-top: 1px solid $accent-color;
   border-bottom: 1px solid $accent-color;
   padding: 1em 0;
